Fixed Overflow

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,6 +16,7 @@ $gary: #F8F6F6;
 body {
   font-family: 'Karla', sans-serif;
   color: #27283c;
+  overflow-x: hidden;
 }
 
 .container {
